"corrected floats and moved nav margin into correct spot, had it doubled before."
"refactored nav1"

i refactored script
:wq!
:wq

--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 .nav1{
     clear: both;
+    margin-bottom: 10px;
 }
 
 .main{
-    float: inherit;
+    float: left;
 }
 
-.nav1{
-    margin-bottom: 10px;
-}
+
