added classses and buttons for UV index. Also added code to my css for the backgrounds

--- a/style.css
+++ b/style.css
@@ -7,4 +7,15 @@
     float: left;
 }
 
+.low{
+    background-color: green;
+}
+
+.meh{
+    background-color: yellow;
+}
+
+.uhoh{
+    background-color: red;
+}
 
